--- a/style.css
+++ b/style.css
@@ -59,11 +59,51 @@ section {
 }
 
 .icons img{
-    margin: 1 rem;
+    margin: 1rem;
     cursor: pointer;
 }
 
 .icons img:hover {
     width: 40px;
     height: 40px;
+}
+
+.btn {
+    background: var(--main-color);
+    color:#ffffff;
+    padding: 1rem 3rem;
+    font-size: 1.7rem;
+    cursor: pointer;
+    margin-top: 1rem;
+    display: inline-block;
+}
+
+.home-container {
+    background: url("./img/home-img.jpg");
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+}
+
+.content {
+    max-width: 60rem;
+}
+
+.content h3 {
+    color: #ffffff;
+    font-size: 6rem;
+}
+
+.content p {
+    color: #ffffff;
+    font-size: 2rem;
+    font-weight: 80;
+    line-height: 1.8;
+    padding: 1rem 0;
+}
+
+.home-container section {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
 }
